--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -36,7 +36,7 @@ $fonts: (
 @each $font, $props in $fonts {
   @font-face {
       font-family: #{map-get($props, name)};
-       src: local("#{map-get($props, name)}"), url('../fonts/#{map-get($props, url)}.ttf') format('truetype');
+       src: url('../fonts/#{map-get($props, url)}.ttf') format('truetype');
       font-weight: #{map-get($props, weight)};
       font-style: #{map-get($props, type)};
     }
