Create blog post using GNU make to compile css files from sass.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <a href="about" class="read-more">
                     <span>Read more</span>
-                    <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" title="blog icon">
                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                             <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
                             <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
