--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -83,7 +83,7 @@ $stars-list: (
         }
 
         rect {
-            @include transition(fill 0.25s);
+            transition: fill 0.25s;
             fill: $c-main;
         }
 
