--- a/scss/base.scss
+++ b/scss/base.scss
@@ -95,12 +95,14 @@ h5 { font-size: 2.4rem; }
 h6 { font-size: 2rem; }
 
 @include mq-max(600) {
-    h1 { font-size: 4rem; }
+    h1 { font-size: 3.5rem; }
     h2 { font-size: 3.2rem; }
-    h3 { font-size: 2.6rem; }
-    h4 { font-size: 2.2rem; }
-    h5 { font-size: 1.8rem; }
-    h6 { font-size: 1.6rem; }
+    h3 { font-size: 2.8rem; }
+    h4 { font-size: 2.4rem; }
+    h5 { font-size: 2.2rem; }
+    h6 { font-size: 2rem; }
+
+    body { font-size: 1.9rem; }
 }
 
 h1,
